--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "angular": "^1.5.8",
     "angular-ui-router": "^0.3.2",
-    "normalize.css": "^5.0.0"
+    "normalize.css": "^5.0.0",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1"
   },
   "devDependencies": {
     "babel-core": "^6.10.4",
@@ -25,6 +27,7 @@
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-runtime": "6.5.0",
     "babel-preset-es2015": "6.5.0",
+    "babel-preset-react": "^6.16.0",
     "babel-preset-stage-1": "6.5.0",
     "chai": "^3.5.0",
     "css-loader": "^0.23.1",
