--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   "dependencies": {
     "angular": "^1.5.8",
     "angular-ui-router": "^0.3.2",
+    "body-parser": "^1.15.2",
+    "knex": "^0.12.6",
     "normalize.css": "^5.0.0",
+    "pg": "^6.1.2",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
   },
