--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "angular": "^1.5.8",
     "angular-ui-router": "^0.3.2",
     "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
+    "express-session": "^1.15.0",
     "knex": "^0.12.6",
     "normalize.css": "^5.0.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "pg": "^6.1.2",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
