--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
     "webpack-dev-middleware": "1.5.1",
     "webpack-dev-server": "^1.14.1",
     "webpack-hot-middleware": "2.7.1"
+  },
+  "scripts": {
+    "start": "node server/javascript/index.js"
   }
 }
