--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "passport-local": "^1.0.0",
     "pg": "^6.1.2",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-router-dom": "^4.1.1"
   },
   "devDependencies": {
     "babel-core": "^6.10.4",
