--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
     "babel-preset-stage-1": "6.5.0",
     "chai": "^3.5.0",
     "css-loader": "^0.23.1",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
     "mocha": "^2.5.3",
     "ng-annotate-loader": "^0.2.0",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.1",
+    "webpack": "^2.0.0",
     "webpack-dev-middleware": "1.5.1",
     "webpack-dev-server": "^1.14.1",
     "webpack-hot-middleware": "2.7.1"
