--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
     "express-session": "^1.15.0",
+    "highlight.js": "^9.12.0",
     "knex": "^0.12.6",
+    "marked": "^0.3.6",
     "normalize.css": "^5.0.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
