--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "highlight.js": "^9.12.0",
     "knex": "^0.12.6",
     "marked": "^0.3.6",
+    "moment": "^2.18.1",
     "normalize.css": "^5.0.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
