--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "webpack-dev-server": "^1.14.1",
     "webpack-hot-middleware": "2.7.1"
   },
+  "main": "server/javascript/index.js",
   "scripts": {
     "start": "node server/javascript/index.js"
   }
