--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.15.0",
     "highlight.js": "^9.12.0",
     "knex": "^0.12.6",
+    "lodash": "^4.17.4",
     "marked": "^0.3.6",
     "moment": "^2.18.1",
     "normalize.css": "^5.0.0",
