--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
     "express-session": "^1.15.0",
+    "highcharts": "^6.0.3",
     "highlight.js": "^9.12.0",
     "knex": "^0.12.6",
     "lodash": "^4.17.4",
@@ -31,6 +32,7 @@
     "pg": "^6.1.2",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-highcharts": "^15.0.0",
     "react-router-dom": "^4.1.1"
   },
   "devDependencies": {
