--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   },
   "homepage": "https://github.com/reichert621/blog#readme",
   "dependencies": {
+    "@types/bluebird": "^3.5.19",
     "angular": "^1.5.8",
     "angular-ui-router": "^0.3.2",
+    "bluebird": "^3.5.1",
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
     "express-session": "^1.15.0",
