Fix bluebird typing issue

--- a/client/react/tsconfig.json
+++ b/client/react/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "jsx": "react",
+    "lib" : ["es2015", "es2015.iterable", "dom"],
     "moduleResolution": "node",
     "noImplicitAny": true,
     "outDir": "build",
