Add some basic linting with eslint and tslint

--- a/package.json
+++ b/package.json
@@ -51,6 +51,10 @@
     "babel-preset-stage-1": "6.5.0",
     "chai": "^3.5.0",
     "css-loader": "^0.23.1",
+    "eslint": "^4.14.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-react": "^7.5.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "mocha": "^2.5.3",
@@ -58,6 +62,7 @@
     "raw-loader": "^0.5.1",
     "style-loader": "^0.13.1",
     "ts-loader": "^2.3.2",
+    "tslint": "^5.8.0",
     "typescript": "^2.4.2",
     "webpack": "^2.0.0",
     "webpack-dev-middleware": "1.5.1",
@@ -67,6 +72,10 @@
   "main": "server/javascript/index.js",
   "scripts": {
     "start": "node server/javascript/index.js",
+    "eslint:react": "./node_modules/.bin/eslint 'client/react/app/**/*.js'",
+    "tslint:react": "./node_modules/.bin/tslint 'client/react/app/**/*.ts'",
+    "lint:react": "npm run tslint:react && npm run eslint:react",
+    "lint:api": "./node_modules/.bin/eslint 'server/javascript/**/*.js'",
     "build:react": "webpack --config webpack.react.config.js",
     "restart": "pm2 startOrRestart ecosystem.config.js",
     "deploy": "pm2 deploy ecosystem.config.js production"
