--- a/package.json
+++ b/package.json
@@ -69,6 +69,9 @@
     "webpack-dev-server": "^1.14.1",
     "webpack-hot-middleware": "2.7.1"
   },
+  "engines": {
+    "node": "8.5.0"
+  },
   "main": "server/javascript/index.js",
   "scripts": {
     "start": "node server/javascript/index.js",
