--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
+    "express": "^4.16.2",
     "express-session": "^1.15.0",
     "highcharts": "^6.0.3",
     "highlight.js": "^9.12.0",
