--- a/package.json
+++ b/package.json
@@ -77,10 +77,13 @@
   "scripts": {
     "prestart": "npm run build:react",
     "start": "node server/javascript/index.js",
+    "poststart": "npm run db:migrate",
     "eslint:react": "./node_modules/.bin/eslint 'client/react/app/**/*.js'",
     "tslint:react": "./node_modules/.bin/tslint 'client/react/app/**/*.ts'",
     "lint:react": "npm run tslint:react && npm run eslint:react",
     "lint:api": "./node_modules/.bin/eslint 'server/javascript/**/*.js'",
+    "db:migrate": "./node_modules/.bin/knex migrate:latest --knexfile server/javascript/db/knexfile.js",
+    "db:seed": "./node_modules/.bin/knex seed:run --knexfile server/javascript/db/knexfile.js",
     "build:react": "./node_modules/.bin/webpack --config webpack.react.config.js",
     "restart": "pm2 startOrRestart ecosystem.config.js",
     "deploy": "pm2 deploy ecosystem.config.js production"
