--- a/package.json
+++ b/package.json
@@ -75,8 +75,9 @@
   },
   "main": "server/javascript/index.js",
   "scripts": {
-    "prestart": "npm run db:migrate && npm run db:seed && npm run build:react",
+    "prestart": "npm run db:migrate && npm run build:react",
     "start": "node server/javascript/index.js",
+    "dev": "node server/javascript/index.js",
     "eslint:react": "./node_modules/.bin/eslint 'client/react/app/**/*.js'",
     "tslint:react": "./node_modules/.bin/tslint 'client/react/app/**/*.ts'",
     "lint:react": "npm run tslint:react && npm run eslint:react",
