Start taking advantage of redux for state management

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-highcharts": "^15.0.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.1.1",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.19",
