--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@types/bluebird": "^3.5.19",
     "@types/highlight.js": "^9.1.9",
+    "@types/jest": "^22.1.4",
     "@types/lodash": "^4.14.71",
     "@types/marked": "0.0.28",
     "@types/react": "^16.0.35",
@@ -66,6 +67,7 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-react": "^7.5.1",
+    "jest": "^22.4.2",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "mocha": "^2.5.3",
@@ -73,6 +75,7 @@
     "nodemon": "^1.15.1",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.13.1",
+    "ts-jest": "^22.4.1",
     "ts-loader": "^2.3.2",
     "tslint": "^5.8.0",
     "typescript": "^2.4.2",
@@ -83,6 +86,26 @@
   },
   "engines": {
     "node": "8.5.0"
+  },
+  "jest": {
+    "rootDir": "client/react",
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "globals": {
+      "ts-jest": {
+        "tsConfigFile": "tsconfig.json"
+      }
+    },
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   },
   "main": "server/javascript/index.js",
   "scripts": {
@@ -97,6 +120,7 @@
     "db:seed": "./node_modules/.bin/knex seed:run --knexfile server/javascript/db/knexfile.js",
     "build:react": "./node_modules/.bin/webpack --config webpack.react.config.js",
     "react:watch": "./node_modules/.bin/webpack --config webpack.react.config.js -w",
+    "react:test": "jest",
     "restart": "pm2 startOrRestart ecosystem.config.js",
     "deploy": "pm2 deploy ecosystem.config.js production"
   }
