--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "angular-ui-router": "^0.3.2",
     "bluebird": "^3.5.1",
     "body-parser": "^1.15.2",
+    "connect-session-knex": "^1.4.0",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
     "express-session": "^1.15.0",
