Add experimental meditation component to daily gratitude feature

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-datepicker": "^0.64.0",
     "react-dom": "^15.4.1",
     "react-highcharts": "^15.0.0",
+    "react-modal": "^3.3.2",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.1.1",
     "redux": "^3.7.2",
@@ -52,6 +53,7 @@
     "@types/react": "^16.0.35",
     "@types/react-datepicker": "^1.0.0",
     "@types/react-dom": "^16.0.3",
+    "@types/react-modal": "^3.1.2",
     "@types/react-redux": "^5.0.14",
     "@types/react-router-dom": "^4.2.3",
     "babel-core": "^6.10.4",
