--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.19",
+    "@types/highcharts": "^5.0.20",
     "@types/highlight.js": "^9.1.9",
     "@types/jest": "^22.1.4",
     "@types/lodash": "^4.14.71",
