--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     "build:react": "./node_modules/.bin/webpack --config webpack.react.config.js",
     "react:watch": "./node_modules/.bin/webpack --config webpack.react.config.js -w",
     "react:test": "jest",
+    "test": "npm run react:test",
     "restart": "pm2 startOrRestart ecosystem.config.js",
     "deploy": "pm2 deploy ecosystem.config.js production"
   }
