--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-router-dom": "^4.1.1",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "request": "^2.85.0"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.19",
