--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/react-modal": "^3.1.2",
     "@types/react-redux": "^5.0.14",
     "@types/react-router-dom": "^4.2.3",
+    "@types/redux-logger": "^3.0.6",
     "babel-core": "^6.10.4",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
