--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "express": "^4.16.3",
     "express-session": "^1.15.0",
     "highcharts": "^6.1.0",
-    "highlight.js": "^9.12.0",
     "knex": "^0.12.6",
     "lodash": "^4.17.10",
     "marked": "^0.3.19",
@@ -47,43 +46,45 @@
     "@types/highlight.js": "^9.1.9",
     "@types/jest": "^22.2.3",
     "@types/lodash": "^4.14.108",
-    "@types/marked": "0.0.28",
+    "@types/marked": "0.3.0",
     "@types/react": "^16.3.12",
     "@types/react-dom": "^16.0.5",
     "@types/react-modal": "^3.1.2",
     "@types/react-redux": "^5.0.18",
     "@types/react-router-dom": "^4.2.6",
     "@types/redux-logger": "^3.0.6",
+    "awesome-typescript-loader": "^5.0.0",
     "babel-core": "^6.10.4",
-    "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-runtime": "6.5.0",
-    "babel-preset-es2015": "6.5.0",
+    "babel-eslint": "^8.2.3",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-1": "6.5.0",
+    "babel-preset-stage-1": "6.24.1",
     "chai": "^3.5.0",
     "copy-webpack-plugin": "^4.5.1",
-    "css-loader": "^0.23.1",
+    "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-react": "^7.7.0",
     "jest": "^22.4.3",
-    "less": "^2.7.2",
+    "less": "^3.0.2",
     "less-loader": "^4.1.0",
     "mocha": "^2.5.3",
-    "ng-annotate-loader": "^0.2.0",
     "nodemon": "^1.17.3",
     "raw-loader": "^0.5.1",
-    "style-loader": "^0.13.1",
+    "style-loader": "^0.21.0",
     "ts-jest": "^22.4.4",
-    "ts-loader": "^3.5.0",
+    "ts-loader": "^4.2.0",
     "tslint": "^5.9.1",
     "typescript": "^2.8.3",
-    "webpack": "^2.0.0",
-    "webpack-dev-middleware": "1.5.1",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "2.7.1"
+    "webpack": "^4.6.0",
+    "webpack-bundle-analyzer": "^2.11.1",
+    "webpack-cli": "^2.0.15",
+    "webpack-dev-middleware": "3.1.2",
+    "webpack-dev-server": "^3.1.3",
+    "webpack-hot-middleware": "2.22.1"
   },
   "engines": {
     "node": "8.5.0"
@@ -120,11 +121,9 @@
     "lint": "./node_modules/.bin/eslint",
     "db:migrate": "./node_modules/.bin/knex migrate:latest --knexfile server/db/knexfile.js",
     "db:seed": "./node_modules/.bin/knex seed:run --knexfile server/db/knexfile.js",
-    "build:react": "./node_modules/.bin/webpack --config webpack.react.config.js -p",
-    "react:watch": "./node_modules/.bin/webpack --config webpack.react.config.js -w",
-    "react:test": "jest",
-    "build": "npm run build:react",
-    "test": "npm run react:test",
+    "build": "./node_modules/.bin/webpack --config webpack.prod.config.js -p",
+    "watch": "./node_modules/.bin/webpack --config webpack.dev.config.js -w",
+    "test": "jest",
     "restart": "pm2 startOrRestart ecosystem.config.js",
     "deploy": "pm2 deploy ecosystem.config.js production"
   }
