--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "homepage": "https://github.com/reichert621/blog#readme",
   "dependencies": {
+    "@sendgrid/mail": "^6.2.1",
     "bluebird": "^3.5.1",
     "body-parser": "^1.15.2",
     "connect-session-knex": "^1.4.0",
@@ -38,7 +39,8 @@
     "react-router-dom": "^4.1.1",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "twilio": "^3.16.0"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.20",
