--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-1": "6.24.1",
     "chai": "^3.5.0",
+    "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
@@ -87,7 +88,7 @@
     "webpack-hot-middleware": "2.22.1"
   },
   "engines": {
-    "node": "8.5.0"
+    "node": "8.11.0"
   },
   "jest": {
     "rootDir": "client/react",
