--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "lint:api": "./node_modules/.bin/eslint 'server/**/*.js'",
     "lint": "./node_modules/.bin/eslint",
     "db:migrate": "./node_modules/.bin/knex migrate:latest --knexfile server/db/knexfile.js",
+    "db:rollback": "./node_modules/.bin/knex migrate:rollback --knexfile server/db/knexfile.js",
     "db:seed": "./node_modules/.bin/knex seed:run --knexfile server/db/knexfile.js",
     "build": "./node_modules/.bin/webpack --config webpack.prod.config.js -p",
     "watch": "./node_modules/.bin/webpack --config webpack.dev.config.js -w",
