--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-react": "^7.7.0",
+    "file-loader": "^1.1.11",
     "jest": "^22.4.3",
     "less": "^3.0.2",
     "less-loader": "^4.1.0",
