--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pg": "^6.1.2",
+    "query-string": "^6.1.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-highcharts": "^15.0.0",
@@ -47,6 +48,7 @@
     "@types/jest": "^22.2.3",
     "@types/lodash": "^4.14.108",
     "@types/marked": "0.3.0",
+    "@types/query-string": "^6.1.0",
     "@types/react": "^16.3.12",
     "@types/react-dom": "^16.0.5",
     "@types/react-modal": "^3.1.2",
