--- a/package.json
+++ b/package.json
@@ -31,15 +31,17 @@
     "passport-local": "^1.0.0",
     "pg": "^6.1.2",
     "query-string": "^6.1.0",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
+    "react": "^16.6.3",
+    "react-datepicker": "^1.6.0",
+    "react-dom": "^16.6.3",
     "react-highcharts": "^15.0.0",
     "react-modal": "^3.4.4",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.1.1",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "styled-components": "^4.1.1"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.20",
@@ -50,11 +52,13 @@
     "@types/marked": "0.3.0",
     "@types/query-string": "^6.1.0",
     "@types/react": "^16.3.12",
+    "@types/react-datepicker": "^1.1.7",
     "@types/react-dom": "^16.0.5",
     "@types/react-modal": "^3.1.2",
     "@types/react-redux": "^5.0.18",
     "@types/react-router-dom": "^4.2.6",
     "@types/redux-logger": "^3.0.6",
+    "@types/styled-components": "^4.0.3",
     "awesome-typescript-loader": "^5.0.0",
     "babel-core": "^6.10.4",
     "babel-eslint": "^8.2.3",
